overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ main{
 .menu{
     height: calc(100% - 80px);
     justify-content: flex-start;
-   
+   overflow: hidden;
 }
 
 .logo{
